# Quartz

./: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.js
configs/: private_config.json  public_paths.json
src/: app.css  store.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  local_dir.rs  main.rs  server.rs  types.rs
src/components/: Button.svelte  Menu.svelte  TextInput.svelte
src/icons/: close.svelte  copy.svelte  help-circle.svelte  line.svelte  square.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/link-directory/: +page.svelte
src/routes/my-networks/: +page.svelte
src/routes/my-networks/(inner)/: +layout.svelte
src/routes/my-networks/(inner)/[network]/: +page.svelte
src/routes/my-networks/(inner)/[network]/server-options/: +page.svelte
src/routes/my-networks/(inner)/create/: +page.svelte
src/routes/my-networks/(inner)/join/: +page.svelte
src/routes/settings/: +page.svelte
